Fix squashed logos

--- a/app/components/navigation/navigation.sass
+++ b/app/components/navigation/navigation.sass
@@ -18,9 +18,10 @@
       margin-left: 0
     text-indent: -9999px
     background-image: image-url('header.svg')
+    background-repeat: no-repeat
     width: 187px
     height: 55px
-    background-size: 187px 55px
+    background-size: auto 100%
 
   &__menu
     +order(3)
